		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Fix amuleweb progress bar display for files > 4GB

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.

--------------------------------------------------------------------------------

Version 2.2.4 - The "don't know yet if there will be another 2.2" version.
----------
2009-03-??

	gabrielix:
		* Compilation fix for gcc-4.3.2.

	Gaznevada:
		* Compilation fix for IRIX.

	GonoszTopi:
		* Fix compilation of Format.cpp for some platforms

	Stu Redman:
		* Fix crash on global search on Windows
		* Fix splitter bar position in transfer window not restored properly

	Wuischke:
		* Add Asturian language

--------------------------------------------------------------------------------

Version 2.2.3 - The "Late Christmas present" version.
----------
2008-12-28

	Alfred:
		* Fixes to compile with Sun Studio 12.

	Gerd78:
		* Fix for linking with a static bfd library.

	GonoszTopi:
		* Fixed improper handling of EC connection failures.
		* Fix for shells not properly handling empty lists.
		* POSIX fixes in shell code.
		* Made not finding GeoIP non-fatal.
		* Check if --enable-geoip-static can be fulfilled.
		* Fixed loading of zipped ipfilter files. Thanks to CtrlAltDel
		  for the investigation of the problem.
		* Fixed alc progress bar for files >4GB.
		* Fixed #1056: amulegui: incorrect results when searching with
		  min size >= 4GB
		* Disable automatic sorting of dowload list while there is a
		  pop-up menu or file detail dialog displayed.
		* MinGW compilation fix.
		* Fixed GTK crash on closing search tabs. Thanks to btkaos.

	LittleAbacus:
		* Support multiple selections on CSearchListCtrl::OnMarkAsKnown().
